--- a/src/Styling.css
+++ b/src/Styling.css
@@ -1,15 +1,127 @@
-.nav {
+body {
+  width: 100wh;
+  height: 90vh;
+  color: #fff;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  -webkit-animation: Gradient 15s ease infinite;
+  -moz-animation: Gradient 15s ease infinite;
+  animation: Gradient 15s ease infinite;
+}
+
+@-webkit-keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@-moz-keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.icon {
+  height: 50px;
   padding: 10px;
+}
+
+.icons {
+  height: 50px;
+}
+
+.contact-text {
+  padding: 80px;
+  font-size: 30px;
+  font-family: "Titillium Web";
+}
+.email {
+  padding: 50px;
+  font-size: 30px;
+  font-family: "Titillium Web";
+}
+
+.about-page {
+  height: 100vh;
+  background: #3d4c66;
+  display: grid;
+  grid-template-columns: 40% 60%;
+}
+
+.about-text {
+  padding: 50px;
+  font-size: 30px;
+  font-family: "Titillium Web";
+}
+.about-title {
+  padding: 40px;
+  font-size: 50px;
+  font-family: "Titillium Web";
+}
+
+.profile-pic {
+  height: 400px;
+}
+
+.about-col-one {
+  grid-column: 1;
+  display: flex;
+  align-items: center; /* horizontal */
+  justify-content: center; /* vertical */
+}
+.about-col-two {
+  grid-column: 2;
+  display: flex;
+  align-items: center; /* horizontal */
+  justify-content: center; /* vertical */
+}
+.project-page {
+  height: 100vh;
+  background: black;
+}
+.contact-page {
+  height: 100vh;
+  background: #2a3649;
+  display: flex;
+  align-items: center; /* horizontal */
+  justify-content: center; /* vertical */
+}
+
+.nav {
+  padding: 30px;
   text-align: right;
   margin-right: 60px;
-  margin-top: 20px;
   margin-bottom: 20px;
-  color: blue;
+  color: white;
+  background-color: Transparent;
 }
 
 .landing-page {
   height: 100vh;
-  background-color: black;
   display: grid;
   grid-template-columns: auto auto auto auto auto;
   grid-template-rows: auto auto auto;
@@ -22,16 +134,23 @@
   grid-row-end: 3;
 }
 
-.greeting-text {
+.greeting-text-large {
   color: white;
   font-size: 70px;
-  font-family: "Special Elite";
+  font-family: "Titillium Web";
+}
+.greeting-text-small {
+  color: white;
+  font-size: 40px;
+  font-family: "Titillium Web";
 }
 
 .nav-button {
   background-color: Transparent;
   background-repeat: no-repeat;
+  font-family: "Titillium Web";
   border: none;
+  color: white;
   cursor: pointer;
   overflow: hidden;
   font-size: 1.2em;
